# lessify

./: Cargo.toml  Makefile  README.md
examples/: lorem_ipsum.rs  lorem_ipsum_with_trait.rs
src/: lib.rs
tests/: test_pager.rs  test_pager_default.rs  test_pager_error.rs
tests/fixtures/: pager
