[package]
name = "lessify"
version = "0.1.0"
edition = "2021"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Output text through a pager."
license = "MIT"
repository = "https://github.com/qrichert/lessify.git"
readme = "README.md"
keywords = ["tui", "table", "terminal", "console"]
categories = ["command-line-interface", "rendering::engine"]

[dependencies]
