[package]
name = "lessify"
version = "0.2.1"
edition = "2021"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Output text through a pager."
license = "MIT"
repository = "https://github.com/qrichert/lessify.git"
readme = "README.md"
keywords = ["tui", "less", "pager", "terminal", "console"]
categories = ["command-line-interface", "rendering::engine"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
